@@ -241,12 +241,15 @@ configuration for standard i386-compatible processors.
 
         INSTALLATION GUIDE FOR MAC OS X
 
-On recent versions of Mac OS X (10.6 "Snow Leopard", 10.7 "Lion", 10.8 "Mountain Lion",
-and newer versions), it is quite easy to compile and install CWB.
+On recent versions of Mac OS X (10.6 "Snow Leopard" and newer versions), it is
+quite easy to compile and install CWB.
 
- - install XCode and the Command Line Tools
+ - install XCode Command Line Tools
 
-   Lion and later:
+   Mavericks (10.9) and newer:
+     - enter "xcode-select --install" in a terminal window
+
+   Lion (10.7) and Mountain Lion (10.8):
      - install XCode from the Mac App store (XCode 4.2.1 or newer)
      - start XCode and accept Apple license agreement (requires admin password)
      - depending on your XCode version, do one of the following
@@ -254,7 +257,7 @@ and newer versions), it is quite easy to compile and install CWB.
           then install Command Line Tools
         - enter "xcode-select --install" in a terminal window
 
-   Snow Leopard:
+   Snow Leopard (10.6):
       - obtain a free Apple developer account
       - install XCode from https://developer.apple.com/xcode/ (XCode 3.2.6 or newer)
 
@@ -264,17 +267,17 @@ Make sure that no other package managers (Fink, MacPorts) are installed on your
 system, as they might conflict with the build process described here.  Now install
 the required external libraries with the following shell commands:
 
-        brew -v install pkg-config
-        brew -v install glib --universal
-        brew -v install pcre --universal
+        brew -v install glib
+        brew -v install pcre
         brew -v install readline
 
 Now edit the file "config.mk", setting the platform entry to
 
-        include $(TOP)/config/platform/darwin-universal
+        include $(TOP)/config/platform/darwin-brew
 
-and the site configuration as desired.  Alternatively, select "darwin-64" to compile
-a 64-bit-only version tuned to your computer's hardware.
+and the site configuration as desired.  This will build a version of CWB tuned
+to your hardware platform.  See comments at the end of this section if you prefer
+to build universal binaries (with support for 32-bit and 64-bit CPUs).
 
 Then enter the shell commands
 
@@ -285,13 +288,23 @@ Then enter the shell commands
 
 as shown in the section "QUICK INSTALLATION" above.
 
-Note that the Mac OS X configuration auto-detects GNU Readline that has been
+If you want to build universal binaries or another configuration that is not
+tuned to the hardware of the build machine, you cannot use HomeBrew to install
+the required libraries.  Follow the instructions in the section below, then 
+select platform "darwin-universal" (for universal binaries) or "darwin-64"
+(for an explicit 64-bit build).  Note that Apple is phasing out support for
+32-bit code beginning with MacOS Sierra (10.12).
+
+A non-HomeBrew build will attempt to auto-detect a version of GNU Readline
 installed manually or with a package manager such as HomeBrew or MacPorts.  It
-will fall back to the system-provided Editline library only if not version of
-GNU Readline can be found.  In order to check which library CQP will use for
+will fall back on the system-provided Editline library only if no installation
+of GNU Readline can be found.  In order to check which library CQP will use for
 command-line editing, type
 
         instutils/find_readline.perl --check
+
+The other libraries have to be set up so that configuration information can
+be determined with pkg-config (Glib) and pcre-config (PCRE).
 
 
         INSTALLING PREREQUISITE EXTERNAL LIBRARIES
@@ -322,7 +335,7 @@ library (PCRE v10.0.0 and up) is NOT a suitable substitute.
 We strongly recommend to use a recent version of PCRE v8 (>= 8.32) with JIT
 compilation enabled (check with "pcretest -C") in order to ensure good
 performance. For complex regular expressions, this will make the lexicon
-search *A LOT* faster (see http://sljit.sourceforge.net/regex_perf.html).
+search A LOT faster (see http://sljit.sourceforge.net/regex_perf.html).
 Note that standard packages shipped with various Linux distributions may
 not include JIT support and you may have to compile PCRE yourself for
 optimal performance. The following Linux distributions appear to include 
