@@ -16,19 +16,33 @@
 ##  WWW at http://www.gnu.org/copyleft/gpl.html).
 
 ##
-##  PLATFORM CONFIGURATION FILE: Universal build (i386, x06_64) for Mac OS X (Darwin) 10.5+
+##  PLATFORM CONFIGURATION FILE:
+##  Natively tuned 64-bit binaries for Mac OS X 10.10 (Yosemite) and newer 
+##  with prerequisite libraries provided by HomeBrew package manager
 ##
 
 ## Inherits from basic Darwin configuration
 include $(TOP)/config/platform/darwin
 
-## Make sure that Apple's gcc is used (not e.g. a version installed by Fink or MacPorts)
+## Make sure that Apple's gcc is used (not e.g. a fink-installed version)
 CC = /usr/bin/gcc
 
-## Universal build for Intel 32-bit & 64-bit CPUs (standard since for OS X 10.6, which drops PPC support)
-CFLAGS = -Wall -O3 -arch x86_64 -arch i386 -march=core2 -mtune=core2
+## Tune for CPU of the build machine, compiling only 64-bit code
+CFLAGS = -Wall -O3 -arch x86_64 -march=native -mtune=native
 
 DEPEND_CFLAGS = -Wall -O3
 
+## Use stable paths to HomeBrew installed Glib, PCRE and Readline libraries,
+## so binaries will continue to work if prerequisites are updated.
+READLINE_DEFINES = -I/usr/local/opt/readline/include
+READLINE_LIBS = -L/usr/local/opt/readline/lib -lreadline -lhistory
+
+PCRE_DEFINES = -I/usr/local/opt/pcre/include
+PCRE_LIBS = -L/usr/local/opt/pcre/lib -lpcre
+
+GLIB_DEFINES = -I/usr/local/opt/glib/include/glib-2.0 -I/usr/local/opt/glib/lib/glib-2.0/include -I/usr/local/opt/gettext/include
+GLIB_LIBS = -L/usr/local/opt/glib/lib -L/usr/local/opt/gettext/lib -lglib-2.0 -lintl
+
 ## CPU architecture and operating system used to name binary releases
-RELEASE_ARCH = universal
+RELEASE_ARCH = x86_64
+RELEASE_OS = osx-10.10
