@@ -16,7 +16,9 @@
 ##  WWW at http://www.gnu.org/copyleft/gpl.html).
 
 ##
-##  PLATFORM CONFIGURATION FILE: Universal build (i386, x86_64) on Mac OS X (Darwin) 10.5+ with optimisation for Intel Core 2 CPUs
+##  PLATFORM CONFIGURATION FILE:
+##  Universal binaries (i386, x86_64) on Mac OS X 10.6 or newer with optimisation for Intel Core 2 CPUs
+##  with prerequisite libraries provided by MacPorts package manager (deprecated)
 ##
 
 ## Inherits from basic Darwin configuration
