@@ -26,9 +26,9 @@ then
         # build core2-optimised universal binaries (i386 + x86_64) by default on recent Mac OS X
         if [[ -f /opt/local/lib/libglib-2.0.dylib || -f /opt/local/lib/libglib-2.0.a ]]
         then
-            platform="darwin-port-universal" # GLib seems to be provided by MacPorts
+            platform="darwin-port-core2" # GLib seems to be provided by MacPorts
         else
-            platform="darwin-universal" # assume that GLib is provided by HomeBrew or has been compiled by user
+            platform="darwin-64" # assume that GLib is provided by HomeBrew or has been compiled by user
         fi
     fi
     
